# ProtoGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
assets/: README.md  README.zh-CN.md
assets/configs/: demo_config.json  demo_modular_selectors.json  demo_parallel_config.json  hierarchy_architecture_reference.json
assets/inst_desc/: README.md  demo_desc.json
assets/ptx/: README.md  demo_divergence.ptx  demo_kernel.ptx  write_out.ptx
assets/ptx_isa/: demo_ptx64.json  demo_ptx8.json
assets/workloads/: smoke_single_stream.json  smoke_two_stream_event.json
blog/: 2026-02-09-gpu-sim-configurable-isa-modular-uop.md  LICENSE  README.md  introduction.md
cmake/: generate_cudart_shim_assets.cmake
cuda/demo/: README.md  README.zh-CN.md  add_kernel_workload.json  demo  demo.cu  streaming_cudac_demo.cpp  streaming_demo  streaming_demo.cu  streaming_demo.ptx  warp_reduce_add_demo  warp_reduce_add_demo.ptx  warp_reduce_add_demo_alternative.cu  warp_reduce_add_demo_alternative.ptx  warp_reduce_add_demo_executable.cu  warp_reduce_add_demo_ptx.cu
cuda/docs/: LICENSE  README.md  cuda-shim-multi-gpu-requirements.md  cuda-shim-requirement.md
cuda/docs/doc_build/: cuda-shim-build.md
cuda/docs/doc_design/: cuda-shim-logical-design.md  cuda-shim-multi-ptx-design.md  cuda-shim-streams-design.md  cvt-logical-design.md  warp-reduce-add-logical-design.md
cuda/docs/doc_dev/: cuda-shim-dev.md
cuda/docs/doc_spec/: inst_warp_reduce_add.md
cuda/docs/doc_user/: cuda-shim.md
cuda/src/cudart_shim/: assets_provider.cpp  assets_provider.h  cuda_abi_min.h  device_memory.cpp  device_memory.h  (+19 more)
doc_build/: README.md
doc_code/: runtime_modules.component.puml
doc_design/: arch_design.md  sequence.diagram.puml
doc_design/modules/: 00_contracts.md  01_observability.md  02_frontend.md  03_instruction_system.md  06_simt_core.md  07_runtime_streaming.md  08_engines.md  09_kernel_io_and_abi.md
doc_dev/: README.md
doc_dev/modules/: 00_contracts.md  01_observability.md  02.01_frontend_desc_driven_decode.md  02_frontend.md  03_instruction_system.md  05_units.md  06_simt_core.md
doc_plan/plan_design/: plan-gpuSim.prompt.md
doc_plan/plan_dev/: plan-kernelIoAbi.prompt.md  plan-ptx8Decode.prompt.md
doc_spec/: gpu_block_diagram.puml
doc_user/: README.md  scripts.md
docs/: LICENSE  README.md  README.zh-CN.md
docs/doc_build/: README.md  README.zh-CN.md  build.md  build.zh-CN.md
docs/doc_code/: README.md  ptx_to_ir_mapping.sequence.puml  runtime_modules.component.puml  runtime_modules.sequence.puml
docs/doc_design/: arch_design.md  arch_modules_block.diagram.puml
docs/doc_dev/: README.md  README.zh-CN.md
docs/doc_plan/: overall_plan.md
docs/doc_spec/: ptx64_baseline.md  sm70_profile.md  tiny_gpt2_minimal_coverage_matrix.md
docs/doc_user/: README.md  README.zh-CN.md  cli.md  cli.zh-CN.md  kernel_io_and_abi.md  modular_hw_sw_mapping.md  public_api.md  public_api.zh-CN.md  scripts.md  scripts.zh-CN.md  sm_parallel_execution.md  tiny_gpt2_minimal_coverage.md
docs/technical_article/: proto_gpu_arxiv.md
include/gpusim/: abi.h  contracts.h  frontend.h  instruction_desc.h  json.h  memory.h  observability.h  ptx_isa.h  ptx_tokens.h  runtime.h  scheduler.h  simt.h  simt_scheduler.h  units.h
schemas/: README.md  inst_desc.schema.json  ptx_isa.schema.json  workload.schema.json
scripts/: README.md  README.zh-CN.md  build.bat  build.sh  clean_build.sh  cuda_shim_toolchain_helpers.sh  enable_all_debuggabilities.sh  install-hooks.sh  run_cuda_shim_demo_integration.sh  run_cuda_shim_e2e_demo_integration.sh  run_cuda_shim_e2e_multi_ptx_demo_integration.sh  run_cuda_shim_e2e_streaming_demo_cu.sh  run_cuda_shim_e2e_warp_reduce_add_demo_alternative_cu.sh  run_cuda_shim_e2e_warp_reduce_add_demo_cu.sh  run_cuda_shim_multi_ptx_demo_integration.sh  run_cuda_shim_streaming_demo_cu.sh  run_cuda_shim_warp_reduce_add_demo_cu.sh  run_integration_tests.bat  run_integration_tests.sh  run_unit_tests.bat  run_unit_tests.sh  setup_cudart_shim_running_env.sh
scripts/git-hooks/: commit-msg  commit-msg-types.sh  pre-commit  prepare-commit-msg
src/: README.md
src/apps/: README.md
src/common/: README.md  README.zh-CN.md  contracts.cpp  json.cpp
src/frontend/: README.md  binder.cpp  parser.cpp
src/instruction/: README.md  descriptor_registry.cpp  expander.cpp  ptx_isa.cpp
src/memory/: README.md  memory.cpp
src/observability/: README.md  README.zh-CN.md  observability.cpp
src/runtime/: README.md  cta_scheduler.cpp  deps.cpp  engines.cpp  runtime.cpp  workload.cpp
src/simt/: README.md  control_flow_analysis.cpp  control_flow_analysis.h  simt.cpp  warp_scheduler.cpp
src/units/: README.md  control_unit.cpp  exec_core.cpp  mem_unit.cpp
tests/: README.md  builtins_tests.cpp  config_parse_tests.cpp  cudart_shim_memory_smoke_tests.cpp  cudart_shim_streaming_tests.cpp  inst_desc_registry_tests.cpp  memory_no_cache_addrspace_tests.cpp  ptx_isa_mapper_tests.cpp  public_api_in_memory_tests.cpp  simt_predication_controlflow_tests.cpp  tiny_gpt2_minimal_coverage_tests.cpp
tests/cuda/: cudart_shim_memory_smoke_tests.cpp  cudart_shim_ptx_override_tests.cpp
tests/fixtures/: README.md
tests/golden/: README.md
tests/integration/: README.md
tests/unit/: README.md  builtins_tests.cpp  inst_desc_registry_tests.cpp  observability_output_contract_tests.cpp  ptx_isa_mapper_tests.cpp
tests/virtual_hw/: blocking_broker_tests.cpp  device_node_ioctl_tests.cpp
tmp/: gpusim_ptx_0.ptx
tools/: README.md
tools/generators/: README.md
tools/trace_viewer/: README.md
virtual_hw/broker/: blocking_executor.cpp  daemon_main.cpp  socket_transport.cpp
virtual_hw/demo/: device_node_ioctl_sample.cpp  direct_submit_demo.cpp  enable_all_debuggabilities_in_qemu.sh  remote_submit_demo.cpp
virtual_hw/driver/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .protogpu_drv.ko.cmd  .protogpu_drv.mod.cmd  .protogpu_drv.mod.o.cmd  .protogpu_drv.o.cmd  Makefile  README.md  modules.order  protogpu_drv.c  protogpu_drv.ko  protogpu_drv.mod  protogpu_ioctl.h
(+105 files in other folders)
